# job-recommender-mcp

./: app.py  mcp-server.py  pyproject.toml
src/: helper.py  job_api.py
